cargo-features = ["strip"]

[package]
name = "imgslice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
clap = { version = "3.1.6", features = ["derive", "env", "unicode"] }

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = "abort"